--- a/gb/12/7/20/n3639835.md
+++ b/gb/12/7/20/n3639835.md
@@ -1,26 +1,26 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wfcpbv3604/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wfcpbv3604/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wfcpbv3604/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wfcpbv3604/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wfcpbv3604/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>反迫害十三周年 新加坡法轮功烛光悼念</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2012/07/1207200730262534-600x283.jpg" />
 <h6>新加坡法轮功学员在芳林公园集会，抗议中共迫害（摄影：大纪元，美善）
 </h6>
 <hr>
-	<p>【大纪元2012年07月20日讯】（大纪元记者黄思源报导）7月18日傍晚，<ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E6%96%B0%E5%8A%A0%E5%9D%A1.md#1">新加坡</a><ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员在芳林公园举办了纪念7? 20<ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E5%8F%8D%E8%BF%AB%E5%AE%B3.md#1">反迫害</a>十三周年的集体炼功和<ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E7%83%9B%E5%85%89%E6%82%BC%E5%BF%B5.md#1">烛光悼念</a>活动。</p>
-<p>集会现场打出了“<ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>使上亿人身心健康”、“王立军被指迫害法轮功并活摘法轮功器官”、“法办迫害法轮功的江泽民流氓集团”、“解体中共才能停止迫害”等横幅标语，周边摆满了真相展板和“真善忍”美术展的作品，吸引着过往民众驻足观看，了解真相，索要资料，拍照留念。还有中国大陆同胞了解真相后，声明退出中共一切相关组织。更有人当场开始学炼功法。<br />
-	<figure id="attachment_6613044" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2012/07/1207200730412534-600x309.jpg" alt="新加坡法轮功学员在芳林公园集会，抗议中共迫害（摄影：大纪元，美善）" title="新加坡法轮功学员在芳林公园集会，抗议中共迫害（摄影：大纪元，美善）" width="600" b="309"
-	class="size-large wp-image-6613044" /></a><figcaption class="wp-caption-text"><ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E6%96%B0%E5%8A%A0%E5%9D%A1.md#1">新加坡</a>法轮功学员在芳林公园集会，抗议中共迫害（摄影：大纪元，美善）</figcaption></figure><br />
-	<figure id="attachment_6613048" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2012/07/1207200730312534-600x402.jpg" alt="新加坡法轮功学员纪念7?20反迫害13周年，烛光悼念被中共迫害致死的3574名同修（摄影：大纪元，美善）" title="新加坡法轮功学员纪念7?20反迫害13周年，烛光悼念被中共迫害致死的3574名同修（摄影：大纪元，美善）" width="600" b="402"
-	class="size-large wp-image-6613048" /></a><figcaption class="wp-caption-text">新加坡法轮功学员纪念7?20<ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E5%8F%8D%E8%BF%AB%E5%AE%B3.md#1">反迫害</a>13周年，<ahref="https://github.com/wfcpbv3604/djy/blob/master/gb/tag/%E7%83%9B%E5%85%89%E6%82%BC%E5%BF%B5.md#1">烛光悼念</a>被中共迫害致死的3574名同修（摄影：大纪元，美善）</figcaption></figure><br />
-	<figure id="attachment_6613060" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2012/07/1207200730372534-600x402.jpg" alt="新加坡法轮功学员纪念7?20反迫害13周年，烛光悼念被中共迫害致死的3574名同修（摄影：大纪元，美善）" title="新加坡法轮功学员纪念7?20反迫害13周年，烛光悼念被中共迫害致死的3574名同修（摄影：大纪元，美善）" width="600" b="402"
-	class="size-large wp-image-6613060" /></a><figcaption class="wp-caption-text">新加坡法轮功学员纪念7?20反迫害13周年，烛光悼念被中共迫害致死的3574名同修（摄影：大纪元，美善）</figcaption></figure></p>
+	<p>【大纪元2012年07月20日讯】（大纪元记者黄思源报导）7月18日傍晚，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E5%8A%A0%E5%9D%A1.md#1">新加坡</a><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员在芳林公园举办了纪念7? 20<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%8D%E8%BF%AB%E5%AE%B3.md#1">反迫害</a>十三周年的集体炼功和<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%83%9B%E5%85%89%E6%82%BC%E5%BF%B5.md#1">烛光悼念</a>活动。</p>
+<p>集会现场打出了“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>使上亿人身心健康”、“王立军被指迫害法轮功并活摘法轮功器官”、“法办迫害法轮功的江泽民流氓集团”、“解体中共才能停止迫害”等横幅标语，周边摆满了真相展板和“真善忍”美术展的作品，吸引着过往民众驻足观看，了解真相，索要资料，拍照留念。还有中国大陆同胞了解真相后，声明退出中共一切相关组织。更有人当场开始学炼功法。<br />
+	<figure id="attachment_6613044" aria-describedby="caption-attachment-6613044" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2012/07/1207200730412534-600x309.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/07/1207200730412534-600x309.jpg" alt="新加坡法轮功学员在芳林公园集会，抗议中共迫害（摄影：大纪元，美善）" title="新加坡法轮功学员在芳林公园集会，抗议中共迫害（摄影：大纪元，美善）" width="600" b="309"
+	class="size-large wp-image-6613044" /></a><figcaption id="caption-attachment-6613044" class="wp-caption-text"><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E5%8A%A0%E5%9D%A1.md#1">新加坡</a>法轮功学员在芳林公园集会，抗议中共迫害（摄影：大纪元，美善）</figcaption></figure><br />
+	<figure id="attachment_6613048" aria-describedby="caption-attachment-6613048" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2012/07/1207200730312534-600x402.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/07/1207200730312534-600x402.jpg" alt="新加坡法轮功学员纪念7?20反迫害13周年，烛光悼念被中共迫害致死的3574名同修（摄影：大纪元，美善）" title="新加坡法轮功学员纪念7?20反迫害13周年，烛光悼念被中共迫害致死的3574名同修（摄影：大纪元，美善）" width="600" b="402"
+	class="size-large wp-image-6613048" /></a><figcaption id="caption-attachment-6613048" class="wp-caption-text">新加坡法轮功学员纪念7?20<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%8D%E8%BF%AB%E5%AE%B3.md#1">反迫害</a>13周年，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%83%9B%E5%85%89%E6%82%BC%E5%BF%B5.md#1">烛光悼念</a>被中共迫害致死的3574名同修（摄影：大纪元，美善）</figcaption></figure><br />
+	<figure id="attachment_6613060" aria-describedby="caption-attachment-6613060" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2012/07/1207200730372534-600x402.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/07/1207200730372534-600x402.jpg" alt="新加坡法轮功学员纪念7?20反迫害13周年，烛光悼念被中共迫害致死的3574名同修（摄影：大纪元，美善）" title="新加坡法轮功学员纪念7?20反迫害13周年，烛光悼念被中共迫害致死的3574名同修（摄影：大纪元，美善）" width="600" b="402"
+	class="size-large wp-image-6613060" /></a><figcaption id="caption-attachment-6613060" class="wp-caption-text">新加坡法轮功学员纪念7?20反迫害13周年，烛光悼念被中共迫害致死的3574名同修（摄影：大纪元，美善）</figcaption></figure></p>
 <p>70多岁的卓先生仔细地看着“天安门自焚”的展板，叹道：“哦，原来是假的！”他说，“关于法轮功的事情，《早报》、《海峡时报》，不是误报就是过滤掉，看来只有《大纪元》才有真实的讯息。”他打算带着太太一起学炼法轮功。</p>
 <p>澳洲游客TeryFord说，对法轮功的迫害，让他联想起对西藏宗教的迫害，还有叙利亚大屠杀。</p>
 <p>越南大学生Khiem接到法轮功传单，上网看了优昙婆罗花，就开始炼功，已经两个月了。他觉得，这样祥和美好的功法却遭到残酷地迫害，是不可以接受的。<br />
-	<figure id="attachment_6613066" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2012/07/1207200730452534-600x450.jpg" alt="民众希望了解更多法轮功真相（摄影：大纪元，美善）" title="民众希望了解更多法轮功真相（摄影：大纪元，美善）" width="600" b="450"
-	class="size-large wp-image-6613066" /></a><figcaption class="wp-caption-text">民众希望了解更多法轮功真相（摄影：大纪元，美善）</figcaption></figure><br />[[3]]<br />
-	<figure id="attachment_6613078" style="width: 398px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2012/07/1207200726532534.jpg" alt="路人现场学炼法轮功（摄影：大纪元，美善）" title="路人现场学炼法轮功（摄影：大纪元，美善）" width="398" b="540"
-	class="size-large wp-image-6613078" /></a><figcaption class="wp-caption-text">路人现场学炼法轮功（摄影：大纪元，美善）</figcaption></figure></p>
+	<figure id="attachment_6613066" aria-describedby="caption-attachment-6613066" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2012/07/1207200730452534-600x450.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/07/1207200730452534-600x450.jpg" alt="民众希望了解更多法轮功真相（摄影：大纪元，美善）" title="民众希望了解更多法轮功真相（摄影：大纪元，美善）" width="600" b="450"
+	class="size-large wp-image-6613066" /></a><figcaption id="caption-attachment-6613066" class="wp-caption-text">民众希望了解更多法轮功真相（摄影：大纪元，美善）</figcaption></figure><br />[[3]]<br />
+	<figure id="attachment_6613078" aria-describedby="caption-attachment-6613078" style="width: 398px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2012/07/1207200726532534.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2012/07/1207200726532534.jpg" alt="路人现场学炼法轮功（摄影：大纪元，美善）" title="路人现场学炼法轮功（摄影：大纪元，美善）" width="398" b="540"
+	class="size-large wp-image-6613078" /></a><figcaption id="caption-attachment-6613078" class="wp-caption-text">路人现场学炼法轮功（摄影：大纪元，美善）</figcaption></figure></p>
 <p><b>风雨十三载心慈意更坚</b></p>
 <p>作为走过十三年风雨坎坷的法轮功修炼者，他们有着很深的感触。</p>
 <p>李先生是98年在大庆打工时修炼法轮功的。他对风云突变的“7?20”记忆犹新：“99年7月19号晚上还在一起学法，第二天就抓人，炼功点不存在了。”05年，来到新加坡，看到炼功的学员，心里咯登一下，很感动。“坚持下去，会有水落石出、真相大显的一天。”</p>
@@ -42,42 +42,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/10/4/19/n2881569.md#1">【新纪元周刊】揭开活摘器官黑幕</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/11/1/21/n3149521.md#1">世纪伪案“天安门自焚”真相</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/12/4/18/n3568252.md#1">“1400例”——中共造假大曝光</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/12/5/20/n3592817.md#1">一亿人反迫害13年 成中国政局焦点</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md#1">【新纪元周刊】揭开活摘器官黑幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/1/21/n3149521.md#1">世纪伪案“天安门自焚”真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/4/18/n3568252.md#1">“1400例”——中共造假大曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/5/20/n3592817.md#1">一亿人反迫害13年 成中国政局焦点</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/14/n9955432.md#1" target="_blank">文革中自杀的几个名人（3）红岩作者罗广斌</a></li><li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/24/n9888525.md#1" target="_blank">从瘫痪边缘走向健康 内科医生感恩李洪志先生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/7/n11707614.md#1" target="_blank">宁静：刘三姐到底是“歌仙”还是红卫兵？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262924.md#1" target="_blank">参加纽约大集会 意大利小伙子找到人生意义</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/14/n12619436.md#1">庚子冬至木土合相 太史公和星象师有说道</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/17/n12626693.md#1">冬至“开运”民俗有哪些？</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/10/3/n12449869.md#1">《圣经》与《推背图》预言的应验与变换10</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/1/n12587271.md#1">人长猪蹄 猪长人手 见证人畜间轮回转生</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/21/n12636624.md#1">【远见快评】纽时紧张？白宫4.5小时讨论什么</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/22/n12637081.md#1">【十字路口】川普雷霆行动暂停？全球疫情海啸</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/21/n12636176.md#1">【财商天下】扎克伯格掷5亿颠覆大选的背后</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/20/n12633433.md#1">【大选更新12.20】YouTube删除川普律师的国会证词</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/20/n12634239.md#1">美媒：中共借香港大抓捕测试拜登 对结果满意</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/19/n12632507.md#1">北京香堂村遭强拆 政大教授警告：将正当防卫</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/19/n12631225.md#1">刘涛拍戏腰伤难忍 坐不久站不直片场缩成一团</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/20/n12633975.md#1">港警涉性侵六女童 黄秋生呛某影后默不作声</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/20/n12634288.md#1">赵薇罕见用灰色形容爱情 被疑与黄有龙婚变</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/20/n12632966.md#1">1939《华府风云》影评：打场正义之战</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/21/n12636775.md#1">董璇回应假腿争议 摆一字马还写打油诗</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/19/n12632461.md#1">脑中风4大前兆千万别忽略！症状、治疗和复健全图解</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/20/n12634295.md#1">冬至补一天 身体变好一年 中医推荐6种天然补药</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/21/n12634867.md#1">不忍流浪汉受冻 美国男子脱下运动裤给他穿</a></li>
-<li><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/20/12/19/n12632302.md#1">高血压硬降其实很伤身？中医揭健康降血压的关键</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wfcpbv3604/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wfcpbv3604/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/7/20/n3639835.htm">反迫害十三周年 新加坡法轮功烛光悼念</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/7/20/n3639835.htm">反迫害十三周年 新加坡法轮功烛光悼念</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wfcpbv3604/djy/blob/master/gb/12/7/20/n3639835.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wfcpbv3604/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wfcpbv3604/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wfcpbv3604/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wfcpbv3604/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/12/7/20/n3639835.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
